<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView  
	    android:id="@+id/conndetail_top_header"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:textSize="22sp"
	    android:background="@color/drk_blue"
	    android:textColor="@color/alice_blue"
	    />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ticketstatus_scroll_container"
		android:layout_width="fill_parent"
		android:layout_below="@id/conndetail_top_header"
		android:layout_height="wrap_content">
	    <TableLayout android:layout_width="fill_parent"
	        	android:id="@+id/ticketstatus_scroll"
	        	android:stretchColumns="*"
                android:layout_height="wrap_content">
		    <TableLayout android:layout_width="fill_parent"
		        android:id="@+id/conndetail_header_table"
			    android:layout_height="wrap_content"
			    android:stretchColumns="*">
				<TableRow>
				    <TextView  
					    android:id="@+id/conndetail_top1_title"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_height="wrap_content" 
					    android:layout_weight="1"
					    android:textColor="@color/ice"
					    />
					<TextView  
					    android:id="@+id/conndetail_top1"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_span="3"
					    android:layout_height="wrap_content" 
					    android:layout_weight="5"
					    />
				</TableRow>
				<TableRow>
				    <TextView  
					    android:id="@+id/conndetail_top2_title"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_height="wrap_content" 
					    android:layout_weight="1"
					    android:textColor="@color/ice"
					    />
					<TextView  
					    android:id="@+id/conndetail_top2"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_span="3"
					    android:layout_height="wrap_content" 
					    android:layout_weight="5"
					    />
				</TableRow>
				<TableRow>
				    <TextView  
					    android:id="@+id/conndetail_top3_title"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_height="wrap_content" 
					    android:layout_weight="1"
					    android:textColor="@color/ice"
					    />
					<TextView  
					    android:id="@+id/conndetail_top3"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_span="3"
					    android:layout_height="wrap_content" 
					    android:layout_weight="5"
					    />
				</TableRow>
				<TableRow>
				    <TextView  
					    android:id="@+id/conndetail_top4_title"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_height="wrap_content" 
					    android:layout_weight="1"
					    android:textColor="@color/ice"
					    />
					<TextView  
					    android:id="@+id/conndetail_top4"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_span="3"
					    android:layout_height="wrap_content" 
					    android:layout_weight="5"
					    />
				</TableRow>
				<TableRow>
				    <TextView  
					    android:id="@+id/conndetail_top5_title"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_height="wrap_content" 
					    android:layout_weight="1"
					    android:textColor="@color/ice"
					    />
					<TextView  
					    android:id="@+id/conndetail_top5"
					    android:layout_width="wrap_content" 
					    android:textSize="18sp"
					    android:layout_span="3"
					    android:layout_height="wrap_content" 
					    android:layout_weight="5"
					    />
				</TableRow>
			</TableLayout>
			
			<Button 
			    android:id="@+id/conndetail_full_checkout"
			    android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="24sp"
		        android:layout_below="@id/conndetail_header_table"
		        android:text="@string/checkout" />
			<Button 
			    android:id="@+id/conndetail_full_commit"
			    android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="24sp"
		        android:layout_below="@id/conndetail_full_checkout"
		        android:text="@string/commit" />
			<Button 
			    android:id="@+id/conndetail_edit"
			    android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="24sp"
		        android:layout_below="@id/conndetail_full_commit"
		        android:text="@string/edit" />
			<Button 
			    android:id="@+id/conndetail_delete_local"
			    android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="24sp"
		        android:layout_below="@id/conndetail_edit"
		        android:text="@string/delete" />
			<TextView 
			    android:id="@+id/conndetail_status"
			    android:layout_width="fill_parent" 
			    android:textSize="26sp"
			    android:layout_height="wrap_content" 
			    android:layout_weight="1"
			    android:padding="8dip"
			    android:textColor="@color/thistle"
			    />
		</TableLayout>
	</ScrollView>
</RelativeLayout>